# oxdraw

./: .dockerignore  .gitignore  ARCHITECTURE.md  BUILD.md  CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  Cranky.toml  README.md  clippy.toml  deny.toml  justfile  rust-toolchain
.cargo/: config.toml
.github/workflows/: build.yml  clippy.yml  deny.yml  docs.yml  fmt.yml  test.yml
crates/app/: Cargo.toml  README.md
crates/app/src/: lib.rs
crates/oxdraw/: Cargo.toml  README.md
crates/oxdraw/src/: main.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: error.rs  lib.rs
crates/window/: Cargo.toml  README.md
crates/window/src/: context.rs  error.rs  event.rs  key_code.rs  lib.rs  menu.rs  run.rs  window.rs
scripts/: setup.sh  setup_dev.sh
target_ox/: .rustc_info.json
