[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Quadri Adekunle <https://github.com/Quadriphobs1>"]
edition = "2021"
homepage = "https://github.com/Quadriphobs1/oxdraw"
include = ["../../LICENSE", "**/*.rs", "Cargo.toml"]
license = "GNU General Public License"
repository = "https://github.com/Quadriphobs1/oxdraw"
version = "0.0.1"

[workspace.dependencies]
# Local deps
app = { path = "crates/app", version = "0.0.1", default-features = false }
renderer = { path = "crates/renderer", version = "0.0.1", default-features = false }
window = { path = "crates/window", version = "0.0.1", default-features = false }
# External deps
anyhow = "1.0.71"
thiserror = "1.0.40"

[profile.release]
# debug = true # good for profilers
lto = true
panic = "abort"
codegen-units = 1
debug = 0
strip = "symbols"
opt-level = 3

[profile.dev]
opt-level = 1   # Make debug builds run faster
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).
debug = true

# Optimize all dependencies even in debug builds (does not affect workspace packages):
[profile.dev.package."*"]
opt-level = 2

[profile.bench]
debug = true
