[package]
name = "renderer"
authors = ["Quadri Adekunle <https://github.com/Quadriphobs1>"]
edition = "2021"
homepage = "https://github.com/Quadriphobs1/oxdraw"
license = "GPL-3.0"
repository = "https://github.com/Quadriphobs1/oxdraw"
version = "0.0.1"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
log = { version = "0.4.19", default-features = false }
piet-common = { version = "0.6.2", default-features = false }
pixels = { version = "0.13.0", default-features = false }
thiserror = "1.0.40"
