[package]
name = "window"
authors = ["Quadri Adekunle <https://github.com/Quadriphobs1>"]
edition = "2021"
homepage = "https://github.com/Quadriphobs1/oxdraw"
license = "GPL-3.0"
repository = "https://github.com/Quadriphobs1/oxdraw"
version = "0.0.1"
readme = "README.md"
publish = false

[dependencies]
# Local deps
renderer = { path = "../renderer", version = "0.0.1", default-features = false }

# External deps
approx = "0.5.1"
anyhow = "1.0.71"
image = { version = "0.24.6", default-features = false, features = ["png"] }
glam = "0.24.1"
log = { version = "0.4.19", default-features = false }
muda = "0.6.0"
thiserror = "1.0.40"
smol_str = "0.2.0"
winit = "0.29.0-beta.0"

[target."cfg(target_os = \"windows\")".dependencies.windows-sys]
version = "0.48"
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell",
  "Win32_Globalization",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_SystemServices",
]
